# hailstone

./: Cargo.toml  Makefile  README.md  hailstone.c  metadata.h
include/: metadata.h
src/: lib.rs  main.rs
